Migrate fetch to axios

--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -15,10 +15,10 @@
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="./src/favicon.ico" type="image/x-icon">
-
 </head>
 <body>
 <h1 class="title">¿Es feriado en Chile?</h1>
+<div><i class="fa-regular fa-calendar"></i> {{ date }}</div>
 
 <div class="data">
     <div class="card yesterday">
