Styles.css modified

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,8 +13,8 @@ body {
     align-items: center;
     flex-direction: column;
     background: #F1DDBF;
-    height: 100vh;
     gap: 30px;
+    padding: 20px;
 }
 
 h1, h2 {
