Timezone America/Santiago  added to date today

--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -18,7 +18,7 @@
 </head>
 <body>
 <h1 class="title">¿Es feriado en Chile?</h1>
-<div><i class="fa-regular fa-calendar"></i> {{ date }}</div>
+<div><i class="fa-regular fa-calendar"></i> {{ todayIs }}</div>
 
 <div class="data">
     <div class="card yesterday">
