Optimizaciones de rendimiento y diseño agregadas

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,7 +12,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background: #F1DDBF;
+    background: #f1f1f1;
     gap: 30px;
     padding: 20px;
 }
@@ -26,6 +26,10 @@ h1, h2 {
     color: #525E75;
 }
 
+.date-today {
+    color: #525252;
+}
+
 p {
     display: flex;
     flex-direction: column;
@@ -34,7 +38,7 @@ p {
     font-size: 18px;
     font-weight: 300;
     margin: 0 0 10px;
-    color: #000;
+    color: #525252;
 }
 
 p span {
@@ -56,12 +60,14 @@ p span {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: #E8F6EF;
+    background: #ededed;
+    border: 1px solid #ccc;
     border-radius: 20px;
     padding: 20px;
     gap: 10px;
     max-width: 300px;
     width: 100%;
+    box-shadow: 11px 10px 7px -10px rgba(0,0,0,0.1);
 }
 
 .card h2 {
