--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -22,7 +22,7 @@
 
 <body>
     <h1 class="title">¿Es feriado en Chile?</h1>
-    <div><i class="fa-regular fa-calendar"></i> {{ todayIs }}</div>
+    <div class="date-today"><i class="fa-regular fa-calendar"></i> {{ todayIs }}</div>
 
     <div class="data">
         <div class="card yesterday">
