--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
 * {
     margin: 0;
@@ -35,14 +35,17 @@ p {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
     font-size: 18px;
-    font-weight: 300;
+    font-weight: 400;
     margin: 0 0 10px;
     color: #525252;
 }
 
 p span {
+    font-weight: 700;
     margin-bottom: 10px;
+    color: #1B9C85;
 }
 
 .data {
@@ -71,7 +74,7 @@ p span {
 }
 
 .card h2 {
-    color: #1B9C85;
+    color: #525E75;
 }
 
 .card span {
