--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,7 +12,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background: #f1f1f1;
+    background: #d2d2d2;
     gap: 30px;
     padding: 20px;
 }
@@ -64,7 +64,7 @@ p span {
     justify-content: center;
     align-items: center;
     background: #ededed;
-    border: 1px solid #ccc;
+    border: 1px solid #a0a0a0;
     border-radius: 20px;
     padding: 20px;
     gap: 10px;
